Feature: Introduce `MarkdownInputOptions` for improved parsing configurability
Refactor Markdown parsing to use `MarkdownInputOptions`, simplifying configuration management. Replace legacy `Configuration` usage with new options, update `BlockParser`, and enhance line alignment handling for tables. Adjust tests for updated parsing logic.