@@ -24,56 +24,37 @@ import org.pageseeder.xmlwriter.XML.NamespaceAware;
 import org.pageseeder.xmlwriter.XMLStringWriter;
 
 import java.io.IOException;
-import java.util.Arrays;
+import java.io.UncheckedIOException;
 import java.util.List;
 
 public class BlockParserTest {
 
-  public BlockParserTest() {
-  }
-
   @Test
-  public void testEscaping() throws Exception {
-    List<String> e1 = Arrays.asList("This is \\*escaped star\\*");
-    List<String> e2 = Arrays.asList("This is \\[escaped brackets\\]");
-    List<String> e3 = Arrays.asList(" \\- Red", " \\- Green", " \\- Blue");
+  public void testEscaping() {
+    List<String> e1 = List.of("This is \\*escaped star\\*");
+    List<String> e2 = List.of("This is \\[escaped brackets\\]");
+    List<String> e3 = List.of(" \\- Red", " \\- Green", " \\- Blue");
     Assert.assertEquals("<para>This is *escaped star*</para>", toPSML(e1));
     Assert.assertEquals("<para>This is [escaped brackets]</para>", toPSML(e2));
     Assert.assertEquals("<para>- Red<br/>\n- Green<br/>\n- Blue</para>", toPSML(e3));
   }
 
   @Test
-  public void testHeadingSetext() throws Exception {
-    List<String> h1 = Arrays.asList("This is an H1", "=============");
-    List<String> h2 = Arrays.asList("This is an H2", "-------------");
+  public void testHeadingSetext() {
+    List<String> h1 = List.of("This is an H1", "=============");
+    List<String> h2 = List.of("This is an H2", "-------------");
     Assert.assertEquals("<heading level=\"1\">This is an H1</heading>", toPSML(h1));
     Assert.assertEquals("<heading level=\"2\">This is an H2</heading>", toPSML(h2));
   }
 
   @Test
-  public void testHeadingATX() throws Exception {
-    List<String> h1 = Arrays.asList("# This is an H1");
-    List<String> h2 = Arrays.asList("## This is an H2");
-    List<String> h3 = Arrays.asList("### This is an H3");
-    List<String> h4 = Arrays.asList("#### This is an H4");
-    List<String> h5 = Arrays.asList("##### This is an H5");
-    List<String> h6 = Arrays.asList("###### This is an H6");
-    Assert.assertEquals("<heading level=\"1\">This is an H1</heading>", toPSML(h1));
-    Assert.assertEquals("<heading level=\"2\">This is an H2</heading>", toPSML(h2));
-    Assert.assertEquals("<heading level=\"3\">This is an H3</heading>", toPSML(h3));
-    Assert.assertEquals("<heading level=\"4\">This is an H4</heading>", toPSML(h4));
-    Assert.assertEquals("<heading level=\"5\">This is an H5</heading>", toPSML(h5));
-    Assert.assertEquals("<heading level=\"6\">This is an H6</heading>", toPSML(h6));
-  }
-
-  @Test
-  public void testHeadingATX2() throws Exception {
-    List<String> h1 = Arrays.asList("# This is an H1 #");
-    List<String> h2 = Arrays.asList("## This is an H2 ##");
-    List<String> h3 = Arrays.asList("### This is an H3 ###");
-    List<String> h4 = Arrays.asList("#### This is an H4 ####");
-    List<String> h5 = Arrays.asList("##### This is an H5 #####");
-    List<String> h6 = Arrays.asList("###### This is an H6 ######");
+  public void testHeadingATX()  {
+    List<String> h1 = List.of("# This is an H1");
+    List<String> h2 = List.of("## This is an H2");
+    List<String> h3 = List.of("### This is an H3");
+    List<String> h4 = List.of("#### This is an H4");
+    List<String> h5 = List.of("##### This is an H5");
+    List<String> h6 = List.of("###### This is an H6");
     Assert.assertEquals("<heading level=\"1\">This is an H1</heading>", toPSML(h1));
     Assert.assertEquals("<heading level=\"2\">This is an H2</heading>", toPSML(h2));
     Assert.assertEquals("<heading level=\"3\">This is an H3</heading>", toPSML(h3));
@@ -83,20 +64,36 @@ public class BlockParserTest {
   }
 
   @Test
-  public void testBlockquotes() throws Exception {
-    List<String> q1 = Arrays.asList("> Hello");
+  public void testHeadingATX2() {
+    List<String> h1 = List.of("# This is an H1 #");
+    List<String> h2 = List.of("## This is an H2 ##");
+    List<String> h3 = List.of("### This is an H3 ###");
+    List<String> h4 = List.of("#### This is an H4 ####");
+    List<String> h5 = List.of("##### This is an H5 #####");
+    List<String> h6 = List.of("###### This is an H6 ######");
+    Assert.assertEquals("<heading level=\"1\">This is an H1</heading>", toPSML(h1));
+    Assert.assertEquals("<heading level=\"2\">This is an H2</heading>", toPSML(h2));
+    Assert.assertEquals("<heading level=\"3\">This is an H3</heading>", toPSML(h3));
+    Assert.assertEquals("<heading level=\"4\">This is an H4</heading>", toPSML(h4));
+    Assert.assertEquals("<heading level=\"5\">This is an H5</heading>", toPSML(h5));
+    Assert.assertEquals("<heading level=\"6\">This is an H6</heading>", toPSML(h6));
+  }
+
+  @Test
+  public void testBlockquotes() {
+    List<String> q1 = List.of("> Hello");
     Assert.assertEquals("<block label=\"quoted\"><para>Hello</para></block>", toPSML(q1));
   }
 
   @Test
-  public void testParagraphs() throws Exception {
-    List<String> p1 = Arrays.asList("Hi!");
-    List<String> p2 = Arrays.asList("Hi!","","Welcome");
-    List<String> p3 = Arrays.asList("Hi!","Welcome");
-    List<String> p4 = Arrays.asList("Hi!","Welcome","","Test");
-    List<String> p5 = Arrays.asList("Hi!","","Welcome","Test");
-    List<String> p6 = Arrays.asList("Hi!","","Welcome","","Test");
-    List<String> p7 = Arrays.asList("This line is longer than sixty-six characters and should continue without", "a line break");
+  public void testParagraphs() {
+    List<String> p1 = List.of("Hi!");
+    List<String> p2 = List.of("Hi!","","Welcome");
+    List<String> p3 = List.of("Hi!","Welcome");
+    List<String> p4 = List.of("Hi!","Welcome","","Test");
+    List<String> p5 = List.of("Hi!","","Welcome","Test");
+    List<String> p6 = List.of("Hi!","","Welcome","","Test");
+    List<String> p7 = List.of("This line is longer than sixty-six characters and should continue without", "a line break");
     Assert.assertEquals("<para>Hi!</para>", toPSML(p1));
     Assert.assertEquals("<para>Hi!</para><para>Welcome</para>", toPSML(p2));
     Assert.assertEquals("<para>Hi!<br/>\nWelcome</para>", toPSML(p3));
@@ -108,21 +105,21 @@ public class BlockParserTest {
 
 
   @Test
-  public void testUnorderedList() throws Exception {
-    List<String> list1 = Arrays.asList(" * Red", " * Green", " * Blue");
-    List<String> list2 = Arrays.asList(" + Red", " + Green", " + Blue");
-    List<String> list3 = Arrays.asList(" - Red", " - Green", " - Blue");
+  public void testUnorderedList() {
+    List<String> list1 = List.of(" * Red", " * Green", " * Blue");
+    List<String> list2 = List.of(" + Red", " + Green", " + Blue");
+    List<String> list3 = List.of(" - Red", " - Green", " - Blue");
     Assert.assertEquals("<list><item>Red</item><item>Green</item><item>Blue</item></list>", toPSML(list1));
     Assert.assertEquals("<list><item>Red</item><item>Green</item><item>Blue</item></list>", toPSML(list2));
     Assert.assertEquals("<list><item>Red</item><item>Green</item><item>Blue</item></list>", toPSML(list3));
   }
 
   @Test
-  public void testOrderedList() throws Exception {
-    List<String> list1 = Arrays.asList(" 1. Bird", " 2. McHale", " 3. Parish");
-    List<String> list2 = Arrays.asList(" 1. Bird", " 1. McHale", " 1. Parish");
-    List<String> list3 = Arrays.asList(" 7. Bird", " 8. McHale", " 9. Parish");
-    List<String> list4 = Arrays.asList(" 3. Bird", " 1. McHale", " 8. Parish");
+  public void testOrderedList() {
+    List<String> list1 = List.of(" 1. Bird", " 2. McHale", " 3. Parish");
+    List<String> list2 = List.of(" 1. Bird", " 1. McHale", " 1. Parish");
+    List<String> list3 = List.of(" 7. Bird", " 8. McHale", " 9. Parish");
+    List<String> list4 = List.of(" 3. Bird", " 1. McHale", " 8. Parish");
     Assert.assertEquals("<nlist><item>Bird</item><item>McHale</item><item>Parish</item></nlist>", toPSML(list1));
     Assert.assertEquals("<nlist><item>Bird</item><item>McHale</item><item>Parish</item></nlist>", toPSML(list2));
     Assert.assertEquals("<nlist start=\"7\"><item>Bird</item><item>McHale</item><item>Parish</item></nlist>", toPSML(list3));
@@ -130,28 +127,27 @@ public class BlockParserTest {
   }
 
   @Test
-  public void testOrderedListEscape() throws Exception {
-    List<String> list1 = Arrays.asList(" 1986. What a great season.");
-    List<String> list2 = Arrays.asList(" 1986\\. What a great season.");
+  public void testOrderedListEscape() {
+    List<String> list1 = List.of(" 1986. What a great season.");
+    List<String> list2 = List.of(" 1986\\. What a great season.");
     Assert.assertEquals("<nlist start=\"1986\"><item>What a great season.</item></nlist>", toPSML(list1));
     Assert.assertEquals("<para>1986. What a great season.</para>", toPSML(list2));
   }
 
   @Test
-  public void testCodeBlock() throws Exception {
-    List<String> pre = Arrays.asList("    This is a code block.");
+  public void testCodeBlock() {
+    List<String> pre = List.of("    This is a code block.");
     Assert.assertEquals("<preformat>This is a code block.</preformat>", toPSML(pre));
   }
 
-
   @Test
-  public void testFencedCode() throws Exception {
-    List<String> fencedCode1 = Arrays.asList("```", "function() { return 'Hello!';}", "```");
-    List<String> fencedCode2 = Arrays.asList("```javascript", "function() { return 'Hello!';}", "```");
-    List<String> fencedCode3 = Arrays.asList("```", "function() {", "  return 'Hello!';", "}", "```");
-    List<String> fencedCode4 = Arrays.asList("```", "function() {", "  if (a", "  > b) then a = b;", "}", "```");
-    List<String> fencedCode5 = Arrays.asList("```", "function() {","","return 'Hello!';}", "```");
-    List<String> fencedCode6 = Arrays.asList("```", "<report>","  <errors>","    <error>", "```");
+  public void testFencedCode() {
+    List<String> fencedCode1 = List.of("```", "function() { return 'Hello!';}", "```");
+    List<String> fencedCode2 = List.of("```javascript", "function() { return 'Hello!';}", "```");
+    List<String> fencedCode3 = List.of("```", "function() {", "  return 'Hello!';", "}", "```");
+    List<String> fencedCode4 = List.of("```", "function() {", "  if (a", "  > b) then a = b;", "}", "```");
+    List<String> fencedCode5 = List.of("```", "function() {","","return 'Hello!';}", "```");
+    List<String> fencedCode6 = List.of("```", "<report>","  <errors>","    <error>", "```");
     Assert.assertEquals("<preformat>\nfunction() { return 'Hello!';}\n</preformat>", toPSML(fencedCode1));
     Assert.assertEquals("<preformat role=\"javascript\">\nfunction() { return 'Hello!';}\n</preformat>", toPSML(fencedCode2));
     Assert.assertEquals("<preformat>\nfunction() {\n  return 'Hello!';\n}\n</preformat>", toPSML(fencedCode3));
@@ -161,8 +157,8 @@ public class BlockParserTest {
   }
 
   @Test
-  public void testUC1() throws Exception {
-    List<String> mixed = Arrays.asList("`coconut`");
+  public void testUC1() {
+    List<String> mixed = List.of("`coconut`");
     Assert.assertEquals("<para><monospace>coconut</monospace></para>", toPSML(mixed));
   }
 
@@ -233,11 +229,9 @@ public class BlockParserTest {
   /**
    * Returns the Markdown text as PSML using the block parser.
    *
-   * @param text The text to parse
+   * @param lines The lines of text to parse
    *
    * @return The corresponding PSML as a string.
-   *
-   * @throws IOException If thrown by
    */
   private static String toPSML(List<String> lines) {
     try {
@@ -251,7 +245,7 @@ public class BlockParserTest {
       return xml.toString();
     } catch (IOException ex) {
       // Should never happen!
-      throw new RuntimeException(ex);
+      throw new UncheckedIOException(ex);
     }
   }
 
